refactor: update fiveten-colors AB#27277

--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
@@ -26,8 +26,8 @@
   --inner-padding-end: 0;
 
   .aggregate-item-thumbnail {
-    background: var(--fiveten-neutral-100);
-    border: 0.2rem solid var(--fiveten-neutral-100);
+    background: var(--ion-color-fiveten-neutral-100);
+    border: 0.2rem solid var(--ion-color-fiveten-neutral-100);
     width: 2rem;
     height: 2rem;
     align-self: start;
