--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
@@ -113,7 +113,7 @@ app-export-view {
         .ibf-dashboard-right-column-left-sub-column {
           display: flex;
 
-          --ion-background-color: var(--fiveten-neutral-100);
+          --ion-background-color: var(--ion-color-fiveten-neutral-100);
 
           ion-content {
             .ibf-dashboard-right-column-left-sub-column-grid {
