--- a/interfaces/IBF-dashboard/src/theme/ibf-colors/design-system-colors/_index.scss
+++ b/interfaces/IBF-dashboard/src/theme/ibf-colors/design-system-colors/_index.scss
@@ -1,93 +1,32 @@
-:root {
-  --fiveten-navy-100: #f2f5fd;
-  --fiveten-navy-200: #d6e0fa;
-  --fiveten-navy-300: #a0b6eb;
-  --fiveten-navy-700: #0e357b;
-  --fiveten-navy-800: #00214d;
-  --fiveten-navy-900: #001229;
 
-  --fiveten-purple-100: #f3f0ff;
-  --fiveten-purple-200: #d0c0ff;
-  --fiveten-purple-300: #ad92fe;
-  --fiveten-purple-700: #5a32fd;
-  --fiveten-purple-800: #4f22d7;
-  --fiveten-purple-900: #30128c;
-
-  --fiveten-neutral-000: #ffffff;
-  --fiveten-neutral-100: #f4f7fa;
-  --fiveten-neutral-200: #dce1e7;
-  --fiveten-neutral-300: #9fa9b4;
-  --fiveten-neutral-600: #58626d;
-  --fiveten-neutral-800: #2c3136;
-  --fiveten-neutral-900: #0f1218;
-
-  --fiveten-success-100: #e9f1ed;
-  --fiveten-success-200: #bfd5cb;
-  --fiveten-success-300: #7eac96;
-  --fiveten-success-500: #3e8262;
-  --fiveten-success-700: #295741;
-  --fiveten-success-800: #152b21;
-
-  --fiveten-warning-100: #fef3e6;
-  --fiveten-warning-200: #fee9d1;
-  --fiveten-warning-300: #fab666;
-  --fiveten-warning-500: #f0890d;
-  --fiveten-warning-700: #aa6009;
-  --fiveten-warning-800: #704410;
-
-  --fiveten-error-100: #faebef;
-  --fiveten-error-200: #f3d2db;
-  --fiveten-error-300: #e08ea6;
-  --fiveten-error-500: #c21e4d;
-  --fiveten-error-700: #8a0f32;
-  --fiveten-error-800: #410a1a;
-
-  --fiveten-glofas-trigger-700: #c70000;
-
-  --fiveten-link-700: #124ad6;
-
-  --fiveten-navy-100-rgb: 242, 245, 253;
-  --fiveten-navy-200-rgb: 214, 224, 250;
-  --fiveten-navy-300-rgb: 160, 182, 235;
-  --fiveten-navy-700-rgb: 14, 53, 123;
-  --fiveten-navy-800-rgb: 0, 33, 77;
-  --fiveten-navy-900-rgb: 0, 18, 41;
-
-  --fiveten-purple-100-rgb: 243, 240, 255;
-  --fiveten-purple-200-rgb: 208, 192, 255;
-  --fiveten-purple-300-rgb: 173, 146, 254;
-  --fiveten-purple-700-rgb: 90, 50, 253;
-  --fiveten-purple-800-rgb: 79, 34, 215;
-  --fiveten-purple-900-rgb: 48, 18, 140;
-
-  --fiveten-neutral-000-rgb: 255, 255, 255;
-  --fiveten-neutral-100-rgb: 244, 247, 250;
-  --fiveten-neutral-200-rgb: 220, 225, 231;
-  --fiveten-neutral-300-rgb: 159, 169, 180;
-  --fiveten-neutral-600-rgb: 88, 98, 109;
-  --fiveten-neutral-800-rgb: 44, 49, 54;
-  --fiveten-neutral-900-rgb: 15, 18, 24;
-
-  --fiveten-success-100-rgb: 233, 241, 237;
-  --fiveten-success-200-rgb: 191, 213, 203;
-  --fiveten-success-300-rgb: 126, 172, 150;
-  --fiveten-success-500-rgb: 62, 130, 98;
-  --fiveten-success-700-rgb: 41, 87, 65;
-  --fiveten-success-800-rgb: 21, 43, 33;
-
-  --fiveten-warning-100-rgb: 254, 243, 230;
-  --fiveten-warning-200-rgb: 254, 233, 209;
-  --fiveten-warning-300-rgb: 250, 182, 102;
-  --fiveten-warning-500-rgb: 240, 137, 13;
-  --fiveten-warning-700-rgb: 170, 96, 9;
-  --fiveten-warning-800-rgb: 112, 68, 16;
-
-  --fiveten-error-100-rgb: 250, 235, 239;
-  --fiveten-error-200-rgb: 243, 210, 219;
-  --fiveten-error-300-rgb: 224, 142, 166;
-  --fiveten-error-500-rgb: 194, 30, 77;
-  --fiveten-error-700-rgb: 110, 17, 44;
-  --fiveten-error-800-rgb: 65, 10, 26;
-
-  --fiveten-link-700-rgb: 18, 74, 214;
-}
+@import'./_fiveten-red-700.scss';
+@import'./_fiveten-blue-100.scss';
+@import'./_fiveten-blue-500.scss';
+@import'./_fiveten-blue-700.scss';
+@import'./_fiveten-green-100.scss';
+@import'./_fiveten-green-500.scss';
+@import'./_fiveten-green-700.scss';
+@import'./_fiveten-navy-300.scss';
+@import'./_fiveten-navy-900.scss';
+@import'./_fiveten-neutral-0.scss';
+@import'./_fiveten-neutral-100.scss';
+@import'./_fiveten-neutral-300.scss';
+@import'./_fiveten-neutral-500.scss';
+@import'./_fiveten-neutral-700.scss';
+@import'./_fiveten-neutral-900.scss';
+@import'./_fiveten-orange-100.scss';
+@import'./_fiveten-orange-500.scss';
+@import'./_fiveten-orange-700.scss';
+@import'./_fiveten-purple-50.scss';
+@import'./_fiveten-purple-100.scss';
+@import'./_fiveten-purple-300.scss';
+@import'./_fiveten-purple-500.scss';
+@import'./_fiveten-purple-600.scss';
+@import'./_fiveten-purple-700.scss';
+@import'./_fiveten-purple-900.scss';
+@import'./_fiveten-red-100.scss';
+@import'./_fiveten-red-500.scss';
+@import'./_fiveten-red-700.scss';
+@import'./_fiveten-yellow-100.scss';
+@import'./_fiveten-yellow-500.scss';
+@import'./_fiveten-yellow-700.scss';
