--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -130,10 +130,10 @@
   border-radius: 24px;
   width: 48px;
   height: 48px;
-  background-color: var(--fiveten-navy-700);
+  background-color: var(--ion-color-fiveten-navy-900);
   color: white;
   &.exposed {
-    background-color: var(--fiveten-error-500);
+    background-color: var(--ion-color-fiveten-red-500);
   }
   padding-top: 7px;
   text-align: center;
@@ -144,10 +144,10 @@
   border-radius: 30px;
   width: 60px;
   height: 60px;
-  background-color: var(--fiveten-navy-700);
+  background-color: var(--ion-color-fiveten-navy-900);
   color: white;
   &.exposed {
-    background-color: var(--fiveten-error-500);
+    background-color: var(--ion-color-fiveten-red-500);
   }
   text-align: center;
   padding-top: 10px;
@@ -159,10 +159,10 @@
   border-radius: 36px;
   width: 72px;
   height: 72px;
-  background-color: var(--fiveten-navy-700);
+  background-color: var(--ion-color-fiveten-navy-900);
   color: white;
   &.exposed {
-    background-color: var(--fiveten-error-500);
+    background-color: var(--ion-color-fiveten-red-500);
   }
   text-align: center;
   padding-top: 20px;
@@ -174,10 +174,10 @@
   border-radius: 48px;
   width: 96px;
   height: 966px;
-  background-color: var(--fiveten-navy-700);
+  background-color: var(--ion-color-fiveten-navy-900);
   color: white;
   &.exposed {
-    background-color: var(--fiveten-error-500);
+    background-color: var(--ion-color-fiveten-red-500);
   }
   text-align: center;
   padding-top: 30px;
