--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
@@ -8,6 +8,8 @@
 
   ion-card {
     box-shadow: none;
+    background-color: var(--ion-color-fiveten-neutral-100);
+    color: var(--ion-color-ibf-black);
   }
 }
 
@@ -149,20 +151,12 @@
 .dialogue-turn.is-stopped {
   .dialogue-turn--content {
     ion-card {
-      background-color: var(--ion-color-ibf-no-alert-tertiary) !important;
-      color: var(--ion-color-ibf-black) !important;
       border: var(--ion-color-ibf-black) solid 2px;
     }
   }
 }
 
 .dialogue-turn.is-not-triggered {
-  .dialogue-turn--content {
-    ion-card {
-      background-color: var(--ion-color-ibf-no-alert-tertiary) !important;
-      color: var(--ion-color-ibf-no-alert-primary) !important;
-    }
-  }
 
   &.is-selected {
     .dialogue-turn--content {
@@ -173,20 +167,9 @@
   }
 }
 
-.dialogue-turn.is-opening-bubble {
-  .dialogue-turn--content {
-    ion-card {
-      background-color: var(--ion-color-ibf-no-alert-tertiary) !important;
-      color: var(--ion-color-ibf-no-alert-primary) !important;
-    }
-  }
-}
-
 .dialogue-turn.is-triggered {
   .dialogue-turn--content {
     ion-card {
-      background-color: var(--ion-color-ibf-trigger-alert-tertiary) !important;
-      color: var(--ion-color-ibf-trigger-alert-primary) !important;
       border: var(--ion-color-ibf-outline-red) solid 1px;
     }
   }
